<resources>
    <string name="app_name">Draw Screen</string>
    <string name="app_about">Acerca...</string>
    <string name="app_new">Nuevo</string>
    <string name="app_application_about">\nDeveloped by: \nDeini Resendiz \nPaulina Rodiguez</string>
    <string name="app_button_positive">Ok</string>
    <string name="app_option_menu_brush">Pincel</string>
    <string name="app_option_menu_colors">Colores</string>
    <string name="app_option_menu_draft">Borrador</string>
    <string name="app_option_menu_save">Guardar</string>
    <string name="app_option_menu_color_black">Negro</string>
    <string name="app_option_menu_color_green">Verde</string>
    <string name="app_option_menu_color_blue">Azul</string>
    <string name="app_option_menu_color_red">Rojo</string>
    <string name="app_option_menu_color_text">Seleccionar color</string>
    <string name="app_option_menu_brush_text">Seleccionar ancho</string>
    <string name="app_option_menu_brush_one_pt">1 pt</string>
    <string name="app_option_menu_brush_two_pt">2 pt</string>
    <string name="app_option_menu_brush_four_pt">4 pt</string>
    <string name="app_option_menu_brush_six_pt">6 pt</string>
    <string name="app_option_menu_brush_eight_pt">8 pt</string>
    <string name="app_option_menu_brush_ten_pt">10 pt</string>
    <string name="app_option_menu_color_white">Blanco</string>
    <string name="app_name_draw">Nombre del dibujo</string>
    <string name="app_button_cancelable">Cancelar</string>
</resources>
