<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/IdBrush"
        android:icon="@drawable/ic_brush"
        android:title="@string/app_option_menu_brush"
        app:showAsAction="always">
        <menu>
            <group
            android:id="@+id/group_brush"
            android:checkableBehavior="single">
                <item
                    android:title="@string/app_option_menu_brush_text"
                    android:checked="false"
                    android:checkable="false"
                    />
                <item
                    android:id="@+id/IdBrushOne"
                    android:title="@string/app_option_menu_brush_one_pt"
                    android:checked="true"
                    android:onClick="onBrushItemClick"
                    />
                <item
                    android:id="@+id/IdBrushTwo"
                    android:title="@string/app_option_menu_brush_two_pt"
                    android:onClick="onBrushItemClick"
                    />
                <item
                    android:id="@+id/IdBrushFour"
                    android:title="@string/app_option_menu_brush_four_pt"
                    android:onClick="onBrushItemClick"
                    />
                <item
                    android:id="@+id/IdBrushSix"
                    android:title="@string/app_option_menu_brush_six_pt"
                    android:onClick="onBrushItemClick"
                    />
                <item
                    android:id="@+id/IdBrushEight"
                    android:title="@string/app_option_menu_brush_eight_pt"
                    android:onClick="onBrushItemClick"
                    />
                <item
                    android:id="@+id/IdBrushTen"
                    android:title="@string/app_option_menu_brush_ten_pt"
                    android:onClick="onBrushItemClick"
                    />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/IdColors"
        android:icon="@drawable/ic_color_lens"
        android:title="@string/app_option_menu_colors"
        app:showAsAction="always">
        <menu>
            <group
                android:id="@+id/group_colors"
                android:checkableBehavior="single"
                >
                <item
                    android:title="@string/app_option_menu_color_text"
                    android:checked="false"
                    android:checkable="false"
                    />
                <item
                    android:id="@+id/IdColorBlack"
                    android:title="@string/app_option_menu_color_black"
                    android:checked="true"
                    android:onClick="onColorItemClick"
                    />
                <item
                    android:id="@+id/IdColorGreen"
                    android:title="@string/app_option_menu_color_green"
                    android:onClick="onColorItemClick"
                    />
                <item
                    android:id="@+id/IdColorBlue"
                    android:title="@string/app_option_menu_color_blue"
                    android:onClick="onColorItemClick"
                    />
                <item
                    android:id="@+id/IdColorRed"
                    android:title="@string/app_option_menu_color_red"
                    android:onClick="onColorItemClick"
                    />
                <item
                    android:id="@+id/IdColorWhite"
                    android:title="@string/app_option_menu_color_white"
                    android:onClick="onColorItemClick"
                    />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/IdDraft"
        android:icon="@drawable/ic_panorama_fish_eye"
        android:title="@string/app_option_menu_draft"
        app:showAsAction="always">
        <menu>
            <group
                android:id="@+id/group_draft"
                android:checkableBehavior="single">
                <item
                    android:title="@string/app_option_menu_brush_text"
                    android:checked="false"
                    android:checkable="false"
                    />
                <item
                    android:id="@+id/IdDraftOne"
                    android:title="@string/app_option_menu_brush_one_pt"
                    android:checked="true"
                    android:onClick="onDraftItemClick"
                    />
                <item
                    android:id="@+id/IdDraftTwo"
                    android:title="@string/app_option_menu_brush_two_pt"
                    android:onClick="onDraftItemClick"
                    />
                <item
                    android:id="@+id/IdDraftFour"
                    android:title="@string/app_option_menu_brush_four_pt"
                    android:onClick="onDraftItemClick"
                    />
                <item
                    android:id="@+id/IdDrafthSix"
                    android:title="@string/app_option_menu_brush_six_pt"
                    android:onClick="onDraftItemClick"
                    />
                <item
                    android:id="@+id/IdDraftEight"
                    android:title="@string/app_option_menu_brush_eight_pt"
                    android:onClick="onDraftItemClick"
                    />
                <item
                    android:id="@+id/IdDraftTen"
                    android:title="@string/app_option_menu_brush_ten_pt"
                    android:onClick="onDraftItemClick"
                    />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/IdSave"
        android:icon="@drawable/ic_save"
        android:title="@string/app_option_menu_save"
        app:showAsAction="always"/>
</menu>